deploy/order/overlays/service-mesh/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: order
spec:
  host: order
  subsets:
  - name: v1
    labels:
      version: v1
