deploy/order/overlays/service-mesh/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order
spec:
  hosts:
  - order
  http:
  - route:
    - destination:
        host: order
        subset: v1
